# AI_Agent_Masterclass

./: .dockerignore  .env_example  .gitignore  Dockerfile  Dockerfile.async  Dockerfile.sync  README.md  README_part_1.md  README_part_2.md  docker-compose.yml  entrypoint.sh  entrypoint_async.sh  entrypoint_sync.sh  logs.txt  pyproject.toml  requirements.txt
.github/workflows/: docker-images.yaml
mlruns/0/: meta.yaml
state_of_the_business/: README.md  pyproject.toml
state_of_the_business/datasets/: spaceoutfitters_b2b_sales.csv  spaceoutfitters_b2b_sales_lite.csv  spaceoutfitters_b2c_sales.csv  spaceoutfitters_marketing_campaigns.csv  spaceoutfitters_sales.csv  spaceoutfitters_support_data.csv
state_of_the_business/db/: chroma.sqlite3
state_of_the_business/example_reports/: b2b_report.md  b2c_report.md  customer_success_report.md  marketing_report.md
state_of_the_business/mlruns/0/: meta.yaml
state_of_the_business/mlruns/0/traces/1391b46db9b24fc298005400bfc9960a/: trace_info.yaml
state_of_the_business/mlruns/0/traces/6039b296d75844cfa3c37f9371f2e5bb/: trace_info.yaml
state_of_the_business/mlruns/0/traces/9ee4d4771590409caf8f3f0f6bc21de0/: trace_info.yaml
state_of_the_business/mlruns/0/traces/a241630a1cc34ddda3c7123313b915a6/: trace_info.yaml
state_of_the_business/reports/: b2b_report.md  b2c_report.md  customer_success_report.md  marketing_report.md
state_of_the_business/src/: main.py  main_async.py  main_sync.py
state_of_the_business/src/crews/customer_success_ops/: customer_success_ops_crew.py
state_of_the_business/src/crews/customer_success_ops/config/: agents.yaml  tasks.yaml
state_of_the_business/src/crews/mkt_ops_crew/: mkt_ops_crew.py
state_of_the_business/src/crews/mkt_ops_crew/config/: agents.yaml  tasks.yaml
state_of_the_business/src/crews/sales_ops_bb_crew/: sales_ops_b2b_crew.py
state_of_the_business/src/crews/sales_ops_bb_crew/config/: agents.yaml  tasks.yaml
state_of_the_business/src/crews/sales_ops_bc_crew/: sales_ops_b2c_crew.py
state_of_the_business/src/crews/sales_ops_bc_crew/config/: agents.yaml  basic_agent.yaml  basic_task.yaml  tasks.yaml
state_of_the_business/src/flows/: customer_success.py  marketing_ops.py  sales_ops.py
state_of_the_business/src/pydantic_models/: customer_success.py  marketing_opps.py  sales_ops.py
state_of_the_business/src/state_of_the_business/: main.py
state_of_the_business/src/state_of_the_business/crews/customer_success_ops/: customer_success_ops_crew.py
state_of_the_business/src/tools/: file_read_tool.py  llama_csv_file_read_tool.py
state_of_the_business/src/utils/: file_validation.py  llm_config.py  logging_config.py
(+24 files in other folders)
